fix: forgot password z-index fixed

--- a/src/Components/Login/Login.scss
+++ b/src/Components/Login/Login.scss
@@ -654,7 +654,7 @@
         width: 100%;
         height: 82%;
         position: absolute;
-        z-index: 10;
+        z-index: 20;
         top: 0;
         left: 0;
         display: flex;
